# MyAdBlock

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: blocked.txt
docs/: algorithm.md  with_wireshark.md  without_proxy.md
src/: app.c  app.h  blocked.c  blocked.h  client.c  client.h  http.c  http.h  main.c  server.c  server.h
wireshark/: with_proxy.pcapng  without_proxy.pcapng
